# PICO_2_RISCV_multicore_setup_with_threadsafe_UART_PIO_TX

./: CMakeLists.txt  README.md  multicore_main.c  uart_pio.c  uart_pio.h  uart_pio.pio
